changed subscriptions, cleaned up album cards, duration and schedule dates

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,13 @@
  *= require_self
  */
 @import "bootstrap";
+
+.album-card {
+  text-decoration-line: none;
+  color: var(--bs-body-color);
+}
+
+.album-card:active {
+  text-decoration-line: underline;
+  color: var(--bs-body-color);
+}
