updated readme, links

--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -2,7 +2,16 @@ main
   section.py-5.text-center.container
     .row.py-lg-5
       .col-lg-6.col-md-8.mx-auto
-        | VTuber API here
+        p
+          | Channel and video data are pulled via GraphQL from Choooks22's vt-api
+          br/
+          a href="https://github.com/Choooks22/vt-api" target="_blank"
+            | https://github.com/Choooks22/vt-api
+        p
+          | Application Source Code:
+          br/
+          a href="https://github.com/androhgomez/vtuber-watcher" target="_blank"
+            | https://github.com/androhgomez/vtuber-watcher
 
   .album.py-5.bg-light
     .container
