integrated formatted duration, got client-side webpack rendering to work

--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -13,7 +13,7 @@ main
           a href="https://github.com/androhgomez/vtuber-watcher" target="_blank"
             | https://github.com/androhgomez/vtuber-watcher
 
-    = react_component("VideoGallery", {videos: @videos}, prerender: true)
+    = react_component("VideoGallery", {videos: @videos}, prerender: false)
 
     /.album.py-5.bg-light
       /.container
